--- a/libs/grain-controllers/project.json
+++ b/libs/grain-controllers/project.json
@@ -20,6 +20,17 @@
     },
     "lint": {
       "executor": "@nx-dotnet/core:format"
+    },
+    "docfx": {
+      "executor": "@schemaland/net-doc-plugin:docfx"
+    },
+    "doc": {
+      "executor": "@schemaland/net-doc-plugin:docfx",
+      "options": {
+        "output": "generated/docs/references/grain-controllers",
+        "input": "libs/grain-controllers",
+        "outputProject": "docs"
+      }
     }
   },
   "projectType": "library"
