--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "nx run-many -t lint",
     "codegen": "nx run-many -t codegen",
     "serve": "nx run-many -t serve",
-    "dotnet:add": "nx g @nx-dotnet/core:nuget-reference"
+    "dotnet:add": "nx g @nx-dotnet/core:nuget-reference",
+    "docgen": "nx run-many -t doc",
+    "docfx": "nx run-many -t docfx",
+
+    "doc": "npx nx g @nx-dotnet/nxdoc:generate-docs --outputPath docs --project grains"
   },
   "private": true,
   "devDependencies": {
@@ -19,8 +23,10 @@
     "@nx/eslint-plugin": "17.1.2",
     "@nx/jest": "17.1.2",
     "@nx/js": "17.1.2",
+    "@nx/plugin": "^17.1.2",
     "@nx/workspace": "17.1.2",
     "@swc-node/register": "~1.6.7",
+    "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@types/jest": "^29.4.0",
     "@types/node": "18.7.1",
@@ -31,6 +37,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "nx": "17.1.2",
+    "plugin:executor": "link:@nx/plugin:executor",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
@@ -38,6 +45,7 @@
   },
   "dependencies": {
     "@nx/devkit": "^17.1.2",
+    "@swc/helpers": "~0.5.2",
     "tslib": "^2.3.0"
   }
 }
