toc and doc generator

--- a/libs/grains/project.json
+++ b/libs/grains/project.json
@@ -21,9 +21,17 @@
     "lint": {
       "executor": "@nx-dotnet/core:format"
     },
-    "docfx":{
+    "docfx": {
       "executor": "@schemaland/net-doc-plugin:docfx"
-
-  }},
+    },
+    "doc": {
+      "executor": "@schemaland/net-doc-plugin:docfx",
+      "options": {
+        "output": "generated/docs/references/grains",
+        "input": "libs/grains",
+        "outputProject": "docs"
+      }
+    }
+  },
   "projectType": "library"
 }
