--- a/libs/grain-controllers/project.json
+++ b/libs/grain-controllers/project.json
@@ -21,11 +21,9 @@
     "lint": {
       "executor": "@nx-dotnet/core:format"
     },
-    "docfx": {
-      "executor": "@schemaland/net-doc-plugin:docfx"
-    },
+
     "doc": {
-      "executor": "@schemaland/net-doc-plugin:docfx",
+      "executor": "@nx-net/docs:docfx",
       "options": {
         "output": "generated/docs/references/grain-controllers",
         "input": "libs/grain-controllers",
