--- a/plugin/net-doc/project.json
+++ b/plugin/net-doc/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "plugin/net-doc/src",
   "projectType": "library",
+
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
@@ -54,6 +55,9 @@
       "options": {
         "jestConfig": "plugin/net-doc/jest.config.ts"
       }
+    },
+    "doc":{
+      "command": "npx nx g @nx-dotnet/nxdoc:generate-docs --outputDirectory plugin/net-doc/docs"
     }
   },
   "tags": []
