--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,4 @@
 {
-  "source_base_path": "/Users/I347305/Src/orleans/nx/schemaland/generated/docs",
+  "source_base_path": "dinavinter.github.io/nx-orleans/generated/docs",
   "files": []
 }
