--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -23,7 +23,8 @@
     "serve": {
       "executor": "@nx-dotnet/core:serve",
       "options": {
-        "configuration": "Debug"
+        "configuration": "Debug",
+        "launch-profile": "https"
       },
       "configurations": {
         "production": {
