--- a/libs/grains/project.json
+++ b/libs/grains/project.json
@@ -10,7 +10,7 @@
       ],
       "options": {
         "configuration": "Debug",
-        "noDependencies": true
+        "noDependencies": true,
       },
       "configurations": {
         "production": {
