--- a/libs/grains/grains.csproj
+++ b/libs/grains/grains.csproj
@@ -20,6 +20,16 @@
 
   <ItemGroup>
 
+    <PackageReference Include="JsonSchema.Net.Generation" Version="3.5.1" />
+
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
+
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Abstractions" Version="2.2.0" />
+
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.25" />
+
+    <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="7.0.3" />
+
     <PackageReference Include="Microsoft.Orleans.Core" Version="3.7.1"/>
 
     <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="3.7.1"/>
@@ -37,8 +47,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="JsonSchema.Net" Version="5.2.6" />
+    <PackageReference Include="JsonSchema.Net" Version="5.4.2" />
     <PackageReference Include="JsonSchema.Net.Data" Version="4.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Orleans_CodeGenInputs Remove="guest\contract\request\UserId.cs" />
   </ItemGroup>
 
 </Project>
