--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "private": true,
   "devDependencies": {
-    "@nx-dotnet/core": "^2.1.1",
-    "@nx-dotnet/nxdoc": "^2.1.1",
+    "@nx-dotnet/core": "^2.2.0",
+    "@nx-dotnet/nxdoc": "^2.2.0",
     "@nx/eslint": "17.1.2",
     "@nx/eslint-plugin": "17.1.2",
     "@nx/jest": "17.1.2",
@@ -25,6 +25,7 @@
     "@swc-node/register": "~1.6.7",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
+    "@trumbitta/nx-plugin-openapi": "^1.12.1",
     "@types/jest": "^29.4.0",
     "@types/node": "18.7.1",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
@@ -34,6 +35,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "nx": "17.1.2",
+    "openapi-typescript-codegen": "^0.27.0",
     "plugin:executor": "link:@nx/plugin:executor",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
