--- a/nx.json
+++ b/nx.json
@@ -117,9 +117,10 @@
         },
         "ignorePaths": [],
         "tags": [
-          "nx-dotnet",
-          "nx-dotnet",
-          "nx-dotnet"
+          "nx",
+          "dotnet",
+          "orleans",
+          "openapi"
         ]
       }
     }
