--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,11 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
+      - uses: pnpm/action-setup@v2
+        name: Install pnpm
+        with:
+            version: 8
+            run_install: false
       # This line enables distribution
       # The "--stop-agents-after" is optional, but allows idle agents to shut down once the "e2e-ci" targets have been requested
       # - run: npx nx-cloud start-ci-run --distribute-on="3 linux-medium-js" --stop-agents-after="e2e-ci"
